# 2025_2_HallymCapstone_4Fun

./: .gitignore  README.md
python-lesson-analysis-main/: .gitignore  README.md  pyproject.toml
python-lesson-analysis-main/data/cefr/: a1-b2.csv  b2-c1.csv
python-lesson-analysis-main/data/pronunciation_reference/: intonation_patterns.json  phonemes.json  stress_patterns.json
python-lesson-analysis-main/data/pronunciation_reports/: pronunciation_analysis_test_video_20250614_002713.json  pronunciation_analysis_test_video_20250614_002717.json
python-lesson-analysis-main/docs/: dependency_management_strategy.md  speaker_enhancement_guide.md  whisperx_documentation.md
python-lesson-analysis-main/lesson_analyzer/: README_DETAILED_ERRORS.md  __init__.py  __main__.py  cli.py  lesson_analyzer.py
python-lesson-analysis-main/lesson_analyzer/analyzers/: __init__.py
python-lesson-analysis-main/lesson_analyzer/analyzers/hesitation/: fluency_scorer.py  hesitation_analyzer.py
python-lesson-analysis-main/lesson_analyzer/analyzers/language/: __init__.py  grammar_analyzer.py  grammar_analyzer_backup.py  language_analysis_config.py  language_analyzer.py  lexical_diversity_calculator.py  topic_analysis_core.py  topic_familiarity_analyzer.py  vocabulary_analyzer.py
python-lesson-analysis-main/lesson_analyzer/analyzers/pronunciation/: README.md  __init__.py  advanced_phoneme_analyzer.py  alignment_types.py  (+6 more)
python-lesson-analysis-main/lesson_analyzer/charts/: __init__.py  chart_generator.py
python-lesson-analysis-main/lesson_analyzer/core/: __init__.py  adaptive_parameters.py  analysis_config.py  auth_manager.py  configuration_manager.py  dependency_manager.py  flow_metrics.py  performance_monitor.py  pipeline_manager.py  pipeline_stages.py  result_aggregator.py  speaker_name_manager.py  student_count_input.py  user_profile.py  user_profile_manager.py
python-lesson-analysis-main/lesson_analyzer/generators/: __init__.py  language_report.py  report_generator.py
python-lesson-analysis-main/lesson_analyzer/models/: __init__.py  metrics.py  session_info.py  student_profile.py  student_report.py
python-lesson-analysis-main/lesson_analyzer/processors/: __init__.py
python-lesson-analysis-main/lesson_analyzer/services/: __init__.py  cefr_vocabulary_service.py  language_analysis_service.py  report_data_processor.py  report_generator_service.py  report_storage_service.py
python-lesson-analysis-main/lesson_analyzer/templates/: __init__.py  report_templates.py  template_engine.py
python-lesson-analysis-main/lesson_analyzer/utils/: __init__.py  device_utils.py  ffmpeg_utils.py  font_config.py  logging_config.py  text_processing.py
python-lesson-analysis-main/lesson_analyzer/validators/: __init__.py  data_validator.py  flow_validators.py  report_data_validator.py  speaker_validation.py  unified_validator.py
python-lesson-analysis-main/tests/analyzers/: __init__.py
(+834 files in other folders)
